[gd_scene load_steps=2 format=3 uid="uid://e0tsv8uo1qfs"]

[ext_resource type="Script" path="res://GameOverModal.gd" id="1_7t4d0"]

[node name="GameOverModal" type="PanelContainer"]
custom_minimum_size = Vector2(300, 200)
script = ExtResource("1_7t4d0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 3

[node name="RestartButton" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Restart"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 3

[node name="MainMenuButton" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Main Menu"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 3

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer4"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MarginContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer4/QuitButton" to="." method="_on_quit_button_pressed"]
